--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -11,25 +11,39 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <!-- 500 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 700 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 900 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Frontend Mentor | Order summary card</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-    <link rel="stylesheet" href="css/styles.css" />
+    
   </head>
+
   <body>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
+    <p>
+      Order Summary You can now listen to millions of songs, audiobooks, and
+      podcasts on any device anywhere you like! Annual Plan $59.99/year Change
+      Proceed to Payment Cancel Order
+    </p>
 
     <div class="attribution">
       Challenge by
