added css variables and image

--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -32,18 +32,21 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap"
       rel="stylesheet"
     />
+    <link href="./css/styles.css" rel="stylesheet" />
 
     <title>Frontend Mentor | Order summary card</title>
-
-    
   </head>
 
   <body>
-    <p>
-      Order Summary You can now listen to millions of songs, audiobooks, and
-      podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-      Proceed to Payment Cancel Order
-    </p>
+    <div class="card">
+      <p>
+        Order Summary You can now listen to millions of songs, audiobooks, and
+        podcasts on any device anywhere you like! Annual Plan $59.99/year Change
+        Cancel Order
+      </p>
+      <button class="btn" type="button">Proceed to Payment</button>
+      <p><span class="cancel-order">Cancel Order</span></p>
+    </div>
 
     <div class="attribution">
       Challenge by
@@ -52,7 +55,12 @@
       "
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Lloyd Blake</a>.
+      >. Coded by
+      <a
+        href="https://github.com/lblake/Front-End-Projects/tree/main/order-summary-component"
+        target="_blank"
+        >Lloyd Blake</a
+      >.
     </div>
   </body>
 </html>
