--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -11,25 +10,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <!-- 500 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <!-- 700 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- 900 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -39,13 +23,18 @@
 
   <body>
     <div class="card">
-      <p>
-        Order Summary You can now listen to millions of songs, audiobooks, and
-        podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-        Cancel Order
-      </p>
-      <button class="btn" type="button">Proceed to Payment</button>
-      <p><span class="cancel-order">Cancel Order</span></p>
+      <div class="hero">
+        <img src="images/illustration-hero.svg" />
+      </div>
+      <div class="container">
+        <p>
+          Order Summary You can now listen to millions of songs, audiobooks, and
+          podcasts on any device anywhere you like! Annual Plan $59.99/year
+          Change Cancel Order
+        </p>
+        <button class="btn" type="button">Proceed to Payment</button>
+        <p><span class="cancel-order">Cancel Order</span></p>
+      </div>
     </div>
 
     <div class="attribution">
