--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link  rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Order summary card</title>
   </head>
@@ -28,7 +28,7 @@
       </div>
       <div class="container">
         <p>
-          Order Summary You can now listen to millions of songs, audiobooks, and
+          <h1>Order Summary</h1> You can now listen to millions of songs, audiobooks, and
           podcasts on any device anywhere you like! Annual Plan $59.99/year
           Change Cancel Order
         </p>
