--- a/simple-webpage-example/index.html
+++ b/simple-webpage-example/index.html
@@ -7,7 +7,7 @@
   <title>A great blog</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@900&family=PT+Serif:wght@400;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
