--- a/flexbox-image-gallery/index.html
+++ b/flexbox-image-gallery/index.html
@@ -62,8 +62,36 @@
           src="images/pexels-garvin-st-villier-3311574.jpg"
           alt="image of a car"
         />
+        <img src="images/pexels-mike-132657.jpg" alt="image of a car" />
+        <img src="images/pexels-mike-244206.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-alex-azabache-3727257.jpg"
+          alt="image of a car"
+        />
+        <img src="images/pexels-josh-hild-2422260.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-harrison-haines-2834653.jpg"
+          alt="image of a car"
+        />
       </div>
-      <div class="column"></div>
+      <div class="column">
+        <img src="images/pexels-pixabay-326259.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-abdulwahab-alawadhi-3422964.jpg"
+          alt="image of a car"
+        />
+        <img src="images/pexels-karol-d-409701.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-julia-kuzenkov-1974520.jpg"
+          alt="image of a car"
+        />
+        <img src="images/pexels-jae-park-3802510.jpg" alt="image of a car" />
+        <img src="images/pexels-paul-basel-1816823.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-prateek-katyal-2694389.jpg"
+          alt="image of a car"
+        />
+      </div>
     </div>
   </body>
 </html>
