--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -16,24 +16,37 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link  rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Order summary card</title>
   </head>
 
   <body>
     <div class="card">
-      <div class="hero">
-        <img src="images/illustration-hero.svg" />
-      </div>
-      <div class="container">
-        <p>
-          <h1>Order Summary</h1> You can now listen to millions of songs, audiobooks, and
-          podcasts on any device anywhere you like! Annual Plan $59.99/year
-          Change Cancel Order
-        </p>
-        <button class="btn" type="button">Proceed to Payment</button>
-        <p><span class="cancel-order">Cancel Order</span></p>
+      <div class="hero"></div>
+      <div class="bg__image">
+        <div class="container">
+          <img src="images/illustration-hero.svg" />
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+          <div>
+            <article>
+              <img src="images/icon-music.svg" />
+              <h4>Annual Plan</h4>
+              <p>$59.99/year</p>
+            </article>
+            <button class="btn btn-change">Change</button>
+          </div>
+
+          <button class="buttons" type="button">
+            <button class="btn btn-primary">Proceed to Payment</button>
+            <button class="btn btn-secondary">Cancel Order</button>
+          </button>
+          <!-- <p><span class="cancel-order">Cancel Order</span></p> -->
+        </div>
       </div>
     </div>
 
