--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -28,15 +28,17 @@
         <div class="container">
           <img src="images/illustration-hero.svg" />
           <h1>Order Summary</h1>
-          <p>
+          <p class="description">
             You can now listen to millions of songs, audiobooks, and podcasts on
             any device anywhere you like!
           </p>
-          <div>
+          <div class="pricing">
             <article>
               <img src="images/icon-music.svg" />
-              <h4>Annual Plan</h4>
-              <p>$59.99/year</p>
+              <div>
+                <h4>Annual Plan</h4>
+                <p>$59.99/year</p>
+              </div>
             </article>
             <button class="btn btn-change">Change</button>
           </div>
