--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -22,35 +22,34 @@
   </head>
 
   <body>
-    <div class="card">
-      <div class="hero"></div>
-      <div class="bg__image">
-        <div class="container">
-          <img src="images/illustration-hero.svg" />
-          <h1>Order Summary</h1>
-          <p class="description">
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </p>
-          <div class="pricing">
-            <article>
-              <img src="images/icon-music.svg" />
-              <div>
-                <h4>Annual Plan</h4>
-                <p>$59.99/year</p>
-              </div>
-            </article>
-            <button class="btn btn-change">Change</button>
+    <!-- <div class="card">
+      <div class="hero"></div> -->
+    <div class="bg__image"></div>
+    <div class="container">
+      <img src="images/illustration-hero.svg" alt="image of hero" />
+      <h1>Order Summary</h1>
+      <p class="description">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+      <div class="pricing">
+        <article>
+          <img src="images/icon-music.svg" />
+          <div>
+            <h4>Annual Plan</h4>
+            <p>$59.99/year</p>
           </div>
-
-          <button class="buttons" type="button">
-            <button class="btn btn-primary">Proceed to Payment</button>
-            <button class="btn btn-secondary">Cancel Order</button>
-          </button>
-          <!-- <p><span class="cancel-order">Cancel Order</span></p> -->
-        </div>
+        </article>
+        <button class="btn btn-change">Change</button>
       </div>
+
+      <button class="buttons" type="button">
+        <button class="btn btn-primary">Proceed to Payment</button>
+        <button class="btn btn-secondary">Cancel Order</button>
+      </button>
     </div>
+
+    <!-- </div> -->
 
     <div class="attribution">
       Challenge by
