--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -17,41 +17,44 @@
   </head>
   <body>
     <div class="container">
-    <div class="row">
-      <div column>
-        <div class="sedans">
-          <h1>Sedans</h1>
-          <p>
-            Choose a sedan for its affordability and excellent fuel economy.
-            Ideal for cruising in the city or on your next road trip.
-          </p>
-          <a href="#" class="btn">Learn more</a>
+      <div class="row">
+        <div class="column">
+          <img src="images/icon-sedans.svg" />
+          <div class="sedans">
+            <h1>Sedans</h1>
+            <p>
+              Choose a sedan for its affordability and excellent fuel economy.
+              Ideal for cruising in the city or on your next road trip.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+          </div>
+        </div>
+
+        <div class="column">
+          <img src="images/icon-suvs.svg" />
+          <div class="suvs">
+            <h1>SUVs</h1>
+            <p>
+              Take an SUV for its spacious interior, power, and versatility.
+              Perfect for your next family vacation and off-road adventures.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+          </div>
+        </div>
+
+        <div class="column">
+          <img src="images/icon-luxury.svg" />
+          <div class="luxury">
+            <h1>Luxury</h1>
+            <p>
+              Cruise in the best car brands without the bloated prices. Enjoy
+              the enhanced comfort of a luxury rental and arrive in style.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+          </div>
         </div>
       </div>
-
-      <column>
-        <div class="suvs">
-          <h1>SUVs</h1>
-          <p>
-            Take an SUV for its spacious interior, power, and versatility.
-            Perfect for your next family vacation and off-road adventures.
-          </p>
-          <a href="#" class="btn">Learn more</a>
-        </div>
-      </column>
-
-      <column>
-        <div class="luxury">
-          <h1>Luxury</h1>
-          <p>
-            Cruise in the best car brands without the bloated prices. Enjoy the
-            enhanced comfort of a luxury rental and arrive in style.
-          </p>
-          <a href="#" class="btn">Learn more</a>
-        </div>
-      </column>
     </div>
-  </div>
 
     <div class="attribution">
       Challenge by
