--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -26,7 +26,7 @@
               Choose a sedan for its affordability and excellent fuel economy.
               Ideal for cruising in the city or on your next road trip.
             </p>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn btn-sedans">Learn More</a>
           </div>
         </div>
 
@@ -38,7 +38,7 @@
               Take an SUV for its spacious interior, power, and versatility.
               Perfect for your next family vacation and off-road adventures.
             </p>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn btn-suvs">Learn More</a>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
               Cruise in the best car brands without the bloated prices. Enjoy
               the enhanced comfort of a luxury rental and arrive in style.
             </p>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn btn-luxury">Learn More</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://tinyurl.com/29x786uh">Lloyd Blake</a>.
     </div>
   </body>
 </html>
