--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -58,7 +58,9 @@
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
+        target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://tinyurl.com/29x786uh">Lloyd Blake</a>.
     </div>
