udpated css styling

--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="column">
+        <div class="column" id="sedans">
           <img src="images/icon-sedans.svg" />
           <div class="sedans">
             <h1>Sedans</h1>
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <div class="column">
+        <div class="column" id="suvs">
           <img src="images/icon-suvs.svg" />
           <div class="suvs">
             <h1>SUVs</h1>
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <div class="column">
+        <div class="column" id="luxury">
           <img src="images/icon-luxury.svg" />
           <div class="luxury">
             <h1>Luxury</h1>
