updated files after feedback

--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -17,9 +17,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <main class="row">
         <div class="column" id="sedans">
-          <img src="images/icon-sedans.svg" />
+          <img src="images/icon-sedans.svg" aria-hidden="true" />
           <div class="sedans">
             <h1>Sedans</h1>
             <p>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="column" id="suvs">
-          <img src="images/icon-suvs.svg" />
+          <img src="images/icon-suvs.svg" aria-hidden="true" />
           <div class="suvs">
             <h1>SUVs</h1>
             <p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="column" id="luxury">
-          <img src="images/icon-luxury.svg" />
+          <img src="images/icon-luxury.svg" aria-hidden="true" />
           <div class="luxury">
             <h1>Luxury</h1>
             <p>
@@ -53,16 +53,16 @@
             <a href="#" class="btn btn-luxury">Learn More</a>
           </div>
         </div>
-      </div>
+      </main>
     </div>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
         target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://tinyurl.com/29x786uh">Lloyd Blake</a>.
-    </div>
+    </footer>
   </body>
 </html>
