first commit for new challenge

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>Frontend Mentor | Pricing Component with Toggle</title>
+  </head>
+  <body>
+    <h1>Our Pricing</h1>
+    <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+    <div class="pricing-box-container">
+      <div class="pricing-box text-center"></div>
+      <div class="pricing-box pricing-box-bg-image text-center"></div>
+      <div class="pricing-box text-center"></div>
+    </div>
+
+    Our Pricing Annually Monthly Basic &dollar;19.99 &dollar;199.99 500 GB
+    Storage 2 Users Allowed Send up to 3 GB Learn More Professional
+    &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
+    Learn More Master &dollar;39.99 &dollar;399.99 2 TB Storage 10 Users Allowed
+    Send up to 20 GB Learn More
+
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Lloyd Blake</a>.
+    </footer>
+  </body>
+</html>
