--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -10,24 +10,75 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Pricing Component with Toggle</title>
   </head>
   <body>
-    <h1>Our Pricing</h1>
-    <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-    <div class="pricing-box-container">
+    <!-- <h1>Our Pricing</h1> -->
+    <!-- <input type="checkbox" id="switch" /><label for="switch">Toggle</label> -->
+    <!-- <div class="pricing-box-container">
       <div class="pricing-box text-center"></div>
       <div class="pricing-box pricing-box-bg-image text-center"></div>
       <div class="pricing-box text-center"></div>
-    </div>
+    </div> -->
 
-    Our Pricing Annually Monthly Basic &dollar;19.99 &dollar;199.99 500 GB
+    <!-- Our Pricing Annually Monthly Basic &dollar;19.99 &dollar;199.99 500 GB
     Storage 2 Users Allowed Send up to 3 GB Learn More Professional
     &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
     Learn More Master &dollar;39.99 &dollar;399.99 2 TB Storage 10 Users Allowed
-    Send up to 20 GB Learn More
+    Send up to 20 GB Learn More -->
+    <div class="container">
+      <div class="top">
+        <h1>Our Pricing</h1>
+        <div class="toggle-btn">
+          <span class="back">Annually</span>
+          <label class="switch">
+            <input type="checkbox" id="checkbox" onclick="check()" ; />
+            <span class="slider round"></span>
+          </label>
+          <span class="back">Monthly</span>
+        </div>
+      </div>
+
+      <div class="package-container">
+        <div class="packages">
+          <h1>Basic</h1>
+          <h2 class="text1">&dollar;19.99</h2>
+          <h2 class="text2">&dollar;199.99</h2>
+          <ul class="list">
+            <li class="first">500 GB Storage</li>
+            <li>2 Users Allowed</li>
+            <li>Send up to 3 GB</li>
+          </ul>
+          <a href="#" class="button button3">Learn more</a>
+        </div>
+
+        <div class="packages">
+          <h1>Professional</h1>
+          <h2 class="text1">&dollar;24.99</h2>
+          <h2 class="text2">&dollar;249.99</h2>
+          <ul class="list">
+            <li class="first">1 TB Storage</li>
+            <li>5 Users Allowed</li>
+            <li>Send up to 10 GB</li>
+          </ul>
+          <a href="#" class="button button2">Learn more</a>
+        </div>
+
+        <div class="packages">
+          <h1>Master</h1>
+          <h2 class="text1">&dollar;39.99</h2>
+          <h2 class="text2">&dollar;399.99</h2>
+          <ul class="list">
+            <li class="first">2 TB Storage</li>
+            <li>10 Users Allowed</li>
+            <li>Send up to 20 GB</li>
+          </ul>
+          <a href="#" class="button button1">Learn more</a>
+        </div>
+      </div>
+    </div>
 
     <footer class="attribution">
       Challenge by
