updated CSS and HTML

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="package-container">
-        <div class="packages">
+        <div class="packages packages__outter__colour">
           <h1>Basic</h1>
           <h2 class="text1">&dollar;19.99</h2>
           <h2 class="text2">&dollar;199.99</h2>
@@ -66,7 +66,7 @@
           <a href="#" class="button button2">Learn more</a>
         </div>
 
-        <div class="packages">
+        <div class="packages packages__outter__colour">
           <h1>Master</h1>
           <h2 class="text1">&dollar;39.99</h2>
           <h2 class="text2">&dollar;399.99</h2>
