added styling for buttons

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -51,10 +51,10 @@
             <li>2 Users Allowed</li>
             <li>Send up to 3 GB</li>
           </ul>
-          <a href="#" class="button button3">Learn more</a>
+          <a href="#" class="button button_gradient">Learn more</a>
         </div>
 
-        <div class="packages">
+        <div class="packages professional">
           <h1>Professional</h1>
           <h2 class="text1">&dollar;24.99</h2>
           <h2 class="text2">&dollar;249.99</h2>
@@ -63,7 +63,7 @@
             <li>5 Users Allowed</li>
             <li>Send up to 10 GB</li>
           </ul>
-          <a href="#" class="button button2">Learn more</a>
+          <a href="#" class="button button_white">Learn more</a>
         </div>
 
         <div class="packages packages__outter__colour">
@@ -75,7 +75,7 @@
             <li>10 Users Allowed</li>
             <li>Send up to 20 GB</li>
           </ul>
-          <a href="#" class="button button1">Learn more</a>
+          <a href="#" class="button button_gradient">Learn more</a>
         </div>
       </div>
     </div>
