--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -54,14 +54,14 @@
           <a href="#" class="button button_gradient">Learn more</a>
         </div>
 
-        <div class="packages professional">
-          <h1>Professional</h1>
-          <h2 class="text1">&dollar;24.99</h2>
-          <h2 class="text2">&dollar;249.99</h2>
+        <div class="packages">
+          <h1 class="professional">Professional</h1>
+          <h2 class="text1 professional">&dollar;24.99</h2>
+          <h2 class="text2 professional">&dollar;249.99</h2>
           <ul class="list">
-            <li class="first">1 TB Storage</li>
-            <li>5 Users Allowed</li>
-            <li>Send up to 10 GB</li>
+            <li class="first professional">1 TB Storage</li>
+            <li class="professional">5 Users Allowed</li>
+            <li class="professional">Send up to 10 GB</li>
           </ul>
           <a href="#" class="button button_white">Learn more</a>
         </div>
