--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -47,6 +47,7 @@
           <h2 class="text1">&dollar;19.99</h2>
           <h2 class="text2">&dollar;199.99</h2>
           <ul class="list">
+            <li></li>
             <li class="first">500 GB Storage</li>
             <li>2 Users Allowed</li>
             <li>Send up to 3 GB</li>
@@ -59,6 +60,7 @@
           <h2 class="text1 professional">&dollar;24.99</h2>
           <h2 class="text2 professional">&dollar;249.99</h2>
           <ul class="list">
+            <li></li>
             <li class="first professional">1 TB Storage</li>
             <li class="professional">5 Users Allowed</li>
             <li class="professional">Send up to 10 GB</li>
@@ -71,6 +73,8 @@
           <h2 class="text1">&dollar;39.99</h2>
           <h2 class="text2">&dollar;399.99</h2>
           <ul class="list">
+            <li></li>
+
             <li class="first">2 TB Storage</li>
             <li>10 Users Allowed</li>
             <li>Send up to 20 GB</li>
@@ -84,32 +88,24 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Lloyd Blake</a>.
+      >. Coded by <a href="https://tinyurl.com/hrrhfesf">Lloyd Blake</a>.
     </footer>
     <script>
-      function check()
-      {
-          var checkbox = document.getElementById("checkbox");
-          var text1 = document.getElementsByClassName("text1");
-          var text2 = document.getElementsByClassName("text2");
-          for (var i = 0; i < text1.length; i++)
-          {
-              if (checkbox.checked == true)
-              {
-                  text1[i].style.display = "block";
-                  text2[i].style.display = "none";
-              }
-              else if (checkbox.checked == false)
-              {
-                  text1[i].style.display = "none";
-                  text2[i].style.display = "block";
-              }
+      function check() {
+        var checkbox = document.getElementById('checkbox');
+        var text1 = document.getElementsByClassName('text1');
+        var text2 = document.getElementsByClassName('text2');
+        for (var i = 0; i < text1.length; i++) {
+          if (checkbox.checked == true) {
+            text1[i].style.display = 'block';
+            text2[i].style.display = 'none';
+          } else if (checkbox.checked == false) {
+            text1[i].style.display = 'none';
+            text2[i].style.display = 'block';
           }
-      
-      }   
-      check(); 
-      </script>
-      
-
+        }
+      }
+      check();
+    </script>
   </body>
 </html>
