--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -10,6 +10,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Pricing Component with Toggle</title>
@@ -44,8 +50,8 @@
       <div class="package-container">
         <div class="packages packages__outter__colour">
           <h1>Basic</h1>
-          <h2 class="text1">&dollar;19.99</h2>
-          <h2 class="text2">&dollar;199.99</h2>
+          <h2 class="text1"><span class="dollar">&dollar;</span>19.99</h2>
+          <h2 class="text2"><span class="dollar">&dollar;</span>199.99</h2>
           <ul class="list">
             <li></li>
             <li class="first">500 GB Storage</li>
@@ -57,8 +63,12 @@
 
         <div class="packages">
           <h1 class="professional">Professional</h1>
-          <h2 class="text1 professional">&dollar;24.99</h2>
-          <h2 class="text2 professional">&dollar;249.99</h2>
+          <h2 class="text1 professional">
+            <span class="dollar">&dollar;</span>24.99
+          </h2>
+          <h2 class="text2 professional">
+            <span class="dollar">&dollar;</span>249.99
+          </h2>
           <ul class="list">
             <li></li>
             <li class="first professional">1 TB Storage</li>
@@ -70,8 +80,8 @@
 
         <div class="packages packages__outter__colour">
           <h1>Master</h1>
-          <h2 class="text1">&dollar;39.99</h2>
-          <h2 class="text2">&dollar;399.99</h2>
+          <h2 class="text1"><span class="dollar">&dollar;</span>39.99</h2>
+          <h2 class="text2"><span class="dollar">&dollar;</span>399.99</h2>
           <ul class="list">
             <li></li>
 
