removed unneeded comments

--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -18,12 +18,10 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Frontend Mentor | Order summary card</title>
+    <title>Frontend Mentor | Order Summary Card</title>
   </head>
 
   <body>
-    <!-- <div class="card">
-      <div class="hero"></div> -->
     <div class="bg__image"></div>
     <div class="container">
       <img src="images/illustration-hero.svg" alt="image of hero" />
@@ -48,8 +46,6 @@
         <button class="btn btn-secondary">Cancel Order</button>
       </button>
     </div>
-
-    <!-- </div> -->
 
     <div class="attribution">
       Challenge by
