updated css for buttons

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -58,7 +58,9 @@
             <li>2 Users Allowed</li>
             <li>Send up to 3 GB</li>
           </ul>
-          <a href="#" class="button button_gradient">Learn more</a>
+          <a href="#" class="button button_gradient"
+            ><span class="learn">Learn more</span></a
+          >
         </div>
 
         <div class="packages">
@@ -75,7 +77,9 @@
             <li class="professional">5 Users Allowed</li>
             <li class="professional">Send up to 10 GB</li>
           </ul>
-          <a href="#" class="button button_white">Learn more</a>
+          <a href="#" class="button button_white"
+            ><span class="learn">Learn more</span></a
+          >
         </div>
 
         <div class="packages packages__outter__colour">
@@ -89,7 +93,9 @@
             <li>10 Users Allowed</li>
             <li>Send up to 20 GB</li>
           </ul>
-          <a href="#" class="button button_gradient">Learn more</a>
+          <a href="#" class="button button_gradient"
+            ><span class="learn">Learn more</span></a
+          >
         </div>
       </div>
     </div>
