updated css for pricing components

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -49,9 +49,9 @@
 
       <div class="package-container">
         <div class="packages packages__outter__colour">
-          <h1>Basic</h1>
-          <h2 class="text1"><span class="dollar">&dollar;</span>19.99</h2>
-          <h2 class="text2"><span class="dollar">&dollar;</span>199.99</h2>
+          <h1 class="heading_basic">Basic</h1>
+          <h2 class="text1 text_dark"><span class="dollar">&dollar;</span>19.99</h2>
+          <h2 class="text2 text_dark"><span class="dollar">&dollar;</span>199.99</h2>
           <ul class="list">
             <li></li>
             <li class="first">500 GB Storage</li>
@@ -83,9 +83,9 @@
         </div>
 
         <div class="packages packages__outter__colour">
-          <h1>Master</h1>
-          <h2 class="text1"><span class="dollar">&dollar;</span>39.99</h2>
-          <h2 class="text2"><span class="dollar">&dollar;</span>399.99</h2>
+          <h1 class="heading_master">Master</h1>
+          <h2 class="text1 text_dark"><span class="dollar">&dollar;</span>39.99</h2>
+          <h2 class="text2 text_dark"><span class="dollar">&dollar;</span>399.99</h2>
           <ul class="list">
             <li></li>
 
