added background images

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -50,8 +50,12 @@
       <div class="package-container">
         <div class="packages packages__outter__colour">
           <h1 class="heading_basic">Basic</h1>
-          <h2 class="text1 text_dark"><span class="dollar">&dollar;</span>19.99</h2>
-          <h2 class="text2 text_dark"><span class="dollar">&dollar;</span>199.99</h2>
+          <h2 class="text1 text_dark">
+            <span class="dollar">&dollar;</span>19.99
+          </h2>
+          <h2 class="text2 text_dark">
+            <span class="dollar">&dollar;</span>199.99
+          </h2>
           <ul class="list">
             <li></li>
             <li class="first">500 GB Storage</li>
@@ -64,7 +68,7 @@
         </div>
 
         <div class="packages">
-          <h1 class="professional">Professional</h1>
+          <h1 class="professional heading_professional">Professional</h1>
           <h2 class="text1 professional">
             <span class="dollar">&dollar;</span>24.99
           </h2>
@@ -84,8 +88,12 @@
 
         <div class="packages packages__outter__colour">
           <h1 class="heading_master">Master</h1>
-          <h2 class="text1 text_dark"><span class="dollar">&dollar;</span>39.99</h2>
-          <h2 class="text2 text_dark"><span class="dollar">&dollar;</span>399.99</h2>
+          <h2 class="text1 text_dark">
+            <span class="dollar">&dollar;</span>39.99
+          </h2>
+          <h2 class="text2 text_dark">
+            <span class="dollar">&dollar;</span>399.99
+          </h2>
           <ul class="list">
             <li></li>
 
@@ -102,7 +110,9 @@
 
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io/challenges/pricing-component-with-toggle-8vPwRMIC"
+        target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://tinyurl.com/hrrhfesf">Lloyd Blake</a>.
     </footer>
