updated css and HTML for cards

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="package-container">
-        <div class="packages packages__outter__colour">
+        <div class="packages packages__outter__colour packages__outter__size">
           <h1 class="heading_basic">Basic</h1>
           <h2 class="text1 text_dark">
             <span class="dollar">&dollar;</span>19.99
@@ -67,7 +67,7 @@
           >
         </div>
 
-        <div class="packages">
+        <div id="professional_size"class="packages">
           <h1 class="professional heading_professional">Professional</h1>
           <h2 class="text1 professional">
             <span class="dollar">&dollar;</span>24.99
@@ -75,7 +75,7 @@
           <h2 class="text2 professional">
             <span class="dollar">&dollar;</span>249.99
           </h2>
-          <ul class="list">
+          <ul class="professional_list">
             <li></li>
             <li class="first professional">1 TB Storage</li>
             <li class="professional">5 Users Allowed</li>
