added background images and media query for images

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -21,6 +21,12 @@
     <title>Frontend Mentor | Pricing Component with Toggle</title>
   </head>
   <body>
+    <div class="bottom_image">
+      <image src="./images/bg-bottom.svg">
+    </div>
+    <div class="top_image">
+      <image src="./images/bg-top.svg">
+    </div>
     <!-- <h1>Our Pricing</h1> -->
     <!-- <input type="checkbox" id="switch" /><label for="switch">Toggle</label> -->
     <!-- <div class="pricing-box-container">
@@ -50,9 +56,12 @@
       <div class="package-container">
         <div class="packages packages__outter__colour packages__outter__size">
           <h1 class="heading_basic">Basic</h1>
+        <div class="package-price">
+          <span class="dollar">&dollar;</span>
           <h2 class="text1 text_dark">
-            <span class="dollar">&dollar;</span>19.99
+            19.99
           </h2>
+        </div>
           <h2 class="text2 text_dark">
             <span class="dollar">&dollar;</span>199.99
           </h2>
