--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -27,19 +27,7 @@
     <div class="top_image">
       <image src="./images/bg-top.svg">
     </div>
-    <!-- <h1>Our Pricing</h1> -->
-    <!-- <input type="checkbox" id="switch" /><label for="switch">Toggle</label> -->
-    <!-- <div class="pricing-box-container">
-      <div class="pricing-box text-center"></div>
-      <div class="pricing-box pricing-box-bg-image text-center"></div>
-      <div class="pricing-box text-center"></div>
-    </div> -->
-
-    <!-- Our Pricing Annually Monthly Basic &dollar;19.99 &dollar;199.99 500 GB
-    Storage 2 Users Allowed Send up to 3 GB Learn More Professional
-    &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
-    Learn More Master &dollar;39.99 &dollar;399.99 2 TB Storage 10 Users Allowed
-    Send up to 20 GB Learn More -->
+        
     <div class="container">
       <div class="top">
         <h1>Our Pricing</h1>
@@ -61,10 +49,11 @@
           <h2 class="text1 text_dark">
             19.99
           </h2>
-        </div>
           <h2 class="text2 text_dark">
-            <span class="dollar">&dollar;</span>199.99
+            <span class="dollar"></span>
+            199.99
           </h2>
+        </div>          
           <ul class="list">
             <li></li>
             <li class="first">500 GB Storage</li>
@@ -78,12 +67,16 @@
 
         <div id="professional_size"class="packages">
           <h1 class="professional heading_professional">Professional</h1>
-          <h2 class="text1 professional">
-            <span class="dollar">&dollar;</span>24.99
-          </h2>
-          <h2 class="text2 professional">
-            <span class="dollar">&dollar;</span>249.99
-          </h2>
+          <div class="package-price-white">
+            <span class="dollar">&dollar;</span>
+            <h2 class="text1 text_white">
+              24.99
+            </h2>
+            <h2 class="text2 text_white">
+              <span class="dollar"></span>
+              249.99
+            </h2>
+          </div>       
           <ul class="professional_list">
             <li></li>
             <li class="first professional">1 TB Storage</li>
@@ -97,12 +90,16 @@
 
         <div class="packages packages__outter__colour">
           <h1 class="heading_master">Master</h1>
-          <h2 class="text1 text_dark">
-            <span class="dollar">&dollar;</span>39.99
-          </h2>
-          <h2 class="text2 text_dark">
-            <span class="dollar">&dollar;</span>399.99
-          </h2>
+          <div class="package-price">
+            <span class="dollar">&dollar;</span>
+            <h2 class="text1 text_dark">
+              39.99
+            </h2>
+            <h2 class="text2 text_dark">
+              <span class="dollar"></span>
+              399.99
+            </h2>
+          </div>       
           <ul class="list">
             <li></li>
 
