added lazy loading tag

--- a/flexbox-image-gallery/index.html
+++ b/flexbox-image-gallery/index.html
@@ -18,78 +18,148 @@
         <img
           src="images/pexels-charles-kettor-1077785.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-yurii-hlei-1545743.jpg" alt="image of a car" />
-        <img src="images/pexels-mike-120049.jpg" alt="image of a car" />
-        <img src="images/pexels-mike-241316.jpg" alt="image of a car" />
-        <img src="images/pexels-pixabay-164634.jpg" alt="image of a car" />
-        <img src="images/pexels-pixabay-315938.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-yurii-hlei-1545743.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-mike-120049.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-mike-241316.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-pixabay-164634.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-pixabay-315938.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-sourav-mishra-1149831.jpg"
           alt="image of a car"
+          loading="lazy"
         />
       </div>
       <div class="column">
         <img
           src="images/pexels-sourav-mishra-1231643.jpg"
           alt="image of a car"
+          loading="lazy"
         />
         <img
           src="images/pexels-jiarong-deng-1034662.jpg"
           alt="image of a car in city"
+          loading="lazy"
         />
-        <img src="images/pexels-pixabay-248687.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-pixabay-248687.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-torsten-dettlaff-70912.jpg"
           alt="image of a car"
+          loading="lazy"
         />
         <img
           src="images/pexels-matheus-bertelli-799443.jpg "
           alt="image of a car"
+          loading="lazy"
         />
         <img
           src="images/pexels-pavlo-luchkovski-337909.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-cesar-perez-733745.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-cesar-perez-733745.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
       </div>
       <div class="column">
         <img
           src="images/pexels-charles-kettor-831475.jpg"
           alt="image of a car"
+          loading="lazy"
         />
         <img
           src="images/pexels-garvin-st-villier-3311574.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-mike-132657.jpg" alt="image of a car" />
-        <img src="images/pexels-mike-244206.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-mike-132657.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-mike-244206.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-alex-azabache-3727257.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-josh-hild-2422260.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-josh-hild-2422260.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-harrison-haines-2834653.jpg"
           alt="image of a car"
+          loading="lazy"
         />
       </div>
       <div class="column">
-        <img src="images/pexels-pixabay-326259.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-pixabay-326259.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-abdulwahab-alawadhi-3422964.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-karol-d-409701.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-karol-d-409701.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-julia-kuzenkov-1974520.jpg"
           alt="image of a car"
+          loading="lazy"
         />
-        <img src="images/pexels-jae-park-3802510.jpg" alt="image of a car" />
-        <img src="images/pexels-paul-basel-1816823.jpg" alt="image of a car" />
+        <img
+          src="images/pexels-jae-park-3802510.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
+        <img
+          src="images/pexels-paul-basel-1816823.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
         <img
           src="images/pexels-prateek-katyal-2694389.jpg"
           alt="image of a car"
+          loading="lazy"
         />
       </div>
     </div>
