added new images

--- a/flexbox-image-gallery/index.html
+++ b/flexbox-image-gallery/index.html
@@ -50,6 +50,11 @@
           alt="image of a car"
           loading="lazy"
         />
+        <img
+          src="images/pexels-sid-ali-2028885.jpg"
+          alt="image of a car"
+          loading="lazy"
+        />
       </div>
       <div class="column">
         <img
@@ -124,6 +129,11 @@
           alt="image of a car"
           loading="lazy"
         />
+        <img
+        src="images/pexels-orest-sv-2062555.jpg"
+        alt="image of a car"
+        loading="lazy"
+      />
       </div>
       <div class="column">
         <img
