--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -115,12 +115,12 @@
     </div>
 
     <footer class="attribution">
-      Challenge by
+      <!-- Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/pricing-component-with-toggle-8vPwRMIC"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://tinyurl.com/hrrhfesf">Lloyd Blake</a>.
+      >. Coded by <a href="https://tinyurl.com/hrrhfesf">Lloyd Blake</a>. -->
     </footer>
     <script>
       function check() {
