--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -8,11 +8,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/Lloyd-Blake-icon.png"
     />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Frontend Mentor | 3-column preview card component</title>
+    <title>Portfolio Website | 3-column preview card component</title>
   </head>
   <body>
     <div class="container">
@@ -56,12 +56,12 @@
     </div>
 
     <footer class="attribution">
-      Challenge by
+      <!-- Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://tinyurl.com/29x786uh">Lloyd Blake</a>.
+      >. Coded by <a href="https://tinyurl.com/29x786uh">Lloyd Blake</a>. -->
     </footer>
   </body>
 </html>
