added new image

--- a/pricing-component-with-toggle/index.html
+++ b/pricing-component-with-toggle/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/Lloyd-Blake-icon.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Frontend Mentor | Pricing Component with Toggle</title>
+    <title>Portfolio Website | Pricing Component with Toggle</title>
   </head>
   <body>
     <div class="bottom_image">
